draco_trunk/llvm_c_api/core_h.ads


   function LLVMBuildNUWNeg
     (B    : LLVMBuilderRef;
      Val  : LLVMValueRef;
      Name : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:883
   pragma Import (C, LLVMBuildNUWNeg, "LLVMBuildNUWNeg");

   function LLVMBuildFNeg
     (B    : LLVMBuilderRef;
      Val  : LLVMValueRef;
      Name : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:885
   pragma Import (C, LLVMBuildFNeg, "LLVMBuildFNeg");

   function LLVMBuildNot
     (B    : LLVMBuilderRef;
      Val  : LLVMValueRef;
      Name : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:886
   pragma Import (C, LLVMBuildNot, "LLVMBuildNot");

  -- Memory
   function LLVMBuildMalloc
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMTypeRef;
      arg3 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:889
   pragma Import (C, LLVMBuildMalloc, "LLVMBuildMalloc");

   function LLVMBuildArrayMalloc
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMTypeRef;
      arg3 : LLVMValueRef;
      arg4 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:890
   pragma Import (C, LLVMBuildArrayMalloc, "LLVMBuildArrayMalloc");

   function LLVMBuildAlloca
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMTypeRef;
      arg3 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:892
   pragma Import (C, LLVMBuildAlloca, "LLVMBuildAlloca");

   function LLVMBuildArrayAlloca
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMTypeRef;
      arg3 : LLVMValueRef;
      arg4 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:893
   pragma Import (C, LLVMBuildArrayAlloca, "LLVMBuildArrayAlloca");

   function LLVMBuildFree (arg1 : LLVMBuilderRef; arg2 : LLVMValueRef) return LLVMValueRef;  -- Core.h:895
   pragma Import (C, LLVMBuildFree, "LLVMBuildFree");

   function LLVMBuildLoad
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMValueRef;
      arg3 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:896
   pragma Import (C, LLVMBuildLoad, "LLVMBuildLoad");

   function LLVMBuildStore
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMValueRef;
      arg3 : LLVMValueRef) return LLVMValueRef;  -- Core.h:898
   pragma Import (C, LLVMBuildStore, "LLVMBuildStore");

   function LLVMBuildGEP
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMValueRef;
      arg3 : System.Address;
      arg4 : unsigned;
      arg5 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:899
   pragma Import (C, LLVMBuildGEP, "LLVMBuildGEP");

   function LLVMBuildInBoundsGEP
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMValueRef;
      arg3 : System.Address;
      arg4 : unsigned;
      arg5 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:902
   pragma Import (C, LLVMBuildInBoundsGEP, "LLVMBuildInBoundsGEP");

   function LLVMBuildStructGEP
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMValueRef;
      arg3 : unsigned;
      arg4 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:905
   pragma Import (C, LLVMBuildStructGEP, "LLVMBuildStructGEP");

   function LLVMBuildGlobalString
     (arg1 : LLVMBuilderRef;
      arg2 : Interfaces.C.Strings.chars_ptr;
      arg3 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:907
   pragma Import (C, LLVMBuildGlobalString, "LLVMBuildGlobalString");

   function LLVMBuildGlobalStringPtr
     (arg1 : LLVMBuilderRef;
      arg2 : Interfaces.C.Strings.chars_ptr;
      arg3 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:909
   pragma Import (C, LLVMBuildGlobalStringPtr, "LLVMBuildGlobalStringPtr");

  -- Casts
   function LLVMBuildTrunc
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMValueRef;
      arg3 : LLVMTypeRef;
      arg4 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:913
   pragma Import (C, LLVMBuildTrunc, "LLVMBuildTrunc");

   function LLVMBuildZExt
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMValueRef;
      arg3 : LLVMTypeRef;
      arg4 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:915
   pragma Import (C, LLVMBuildZExt, "LLVMBuildZExt");

   function LLVMBuildSExt
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMValueRef;
      arg3 : LLVMTypeRef;
      arg4 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:917
   pragma Import (C, LLVMBuildSExt, "LLVMBuildSExt");

   function LLVMBuildFPToUI
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMValueRef;
      arg3 : LLVMTypeRef;
      arg4 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:919
   pragma Import (C, LLVMBuildFPToUI, "LLVMBuildFPToUI");

   function LLVMBuildFPToSI
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMValueRef;
      arg3 : LLVMTypeRef;
      arg4 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:921
   pragma Import (C, LLVMBuildFPToSI, "LLVMBuildFPToSI");

   function LLVMBuildUIToFP
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMValueRef;
      arg3 : LLVMTypeRef;
      arg4 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:923
   pragma Import (C, LLVMBuildUIToFP, "LLVMBuildUIToFP");

   function LLVMBuildSIToFP
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMValueRef;
      arg3 : LLVMTypeRef;
      arg4 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:925
   pragma Import (C, LLVMBuildSIToFP, "LLVMBuildSIToFP");

   function LLVMBuildFPTrunc
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMValueRef;
      arg3 : LLVMTypeRef;
      arg4 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:927
   pragma Import (C, LLVMBuildFPTrunc, "LLVMBuildFPTrunc");

   function LLVMBuildFPExt
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMValueRef;
      arg3 : LLVMTypeRef;
      arg4 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:929
   pragma Import (C, LLVMBuildFPExt, "LLVMBuildFPExt");

   function LLVMBuildPtrToInt
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMValueRef;
      arg3 : LLVMTypeRef;
      arg4 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:931
   pragma Import (C, LLVMBuildPtrToInt, "LLVMBuildPtrToInt");

   function LLVMBuildIntToPtr
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMValueRef;
      arg3 : LLVMTypeRef;
      arg4 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:933
   pragma Import (C, LLVMBuildIntToPtr, "LLVMBuildIntToPtr");

   function LLVMBuildBitCast
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMValueRef;
      arg3 : LLVMTypeRef;
      arg4 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:935
   pragma Import (C, LLVMBuildBitCast, "LLVMBuildBitCast");

   function LLVMBuildZExtOrBitCast
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMValueRef;
      arg3 : LLVMTypeRef;
      arg4 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:937
   pragma Import (C, LLVMBuildZExtOrBitCast, "LLVMBuildZExtOrBitCast");

   function LLVMBuildSExtOrBitCast
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMValueRef;
      arg3 : LLVMTypeRef;
      arg4 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:939
   pragma Import (C, LLVMBuildSExtOrBitCast, "LLVMBuildSExtOrBitCast");

   function LLVMBuildTruncOrBitCast
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMValueRef;
      arg3 : LLVMTypeRef;
      arg4 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:941
   pragma Import (C, LLVMBuildTruncOrBitCast, "LLVMBuildTruncOrBitCast");

   function LLVMBuildCast
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMOpcode;
      arg3 : LLVMValueRef;
      arg4 : LLVMTypeRef;
      arg5 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:943
   pragma Import (C, LLVMBuildCast, "LLVMBuildCast");

   function LLVMBuildPointerCast
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMValueRef;
      arg3 : LLVMTypeRef;
      arg4 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:945
   pragma Import (C, LLVMBuildPointerCast, "LLVMBuildPointerCast");

  --Signed cast!
   function LLVMBuildIntCast
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMValueRef;
      arg3 : LLVMTypeRef;
      arg4 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:947
   pragma Import (C, LLVMBuildIntCast, "LLVMBuildIntCast");

   function LLVMBuildFPCast
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMValueRef;
      arg3 : LLVMTypeRef;
      arg4 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:949
   pragma Import (C, LLVMBuildFPCast, "LLVMBuildFPCast");

  -- Comparisons
   function LLVMBuildICmp
     (B    : LLVMBuilderRef;
      Op   : LLVMIntPredicate;
      LHS  : LLVMValueRef;
      RHS  : LLVMValueRef;
      Name : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:953
   pragma Import (C, LLVMBuildICmp, "LLVMBuildICmp");

   function LLVMBuildFCmp
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMRealPredicate;
      arg3 : LLVMValueRef;
      arg4 : LLVMValueRef;
      arg5 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:956
   pragma Import (C, LLVMBuildFCmp, "LLVMBuildFCmp");

  -- Miscellaneous instructions
   function LLVMBuildPhi
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMTypeRef;
      arg3 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:961
   pragma Import (C, LLVMBuildPhi, "LLVMBuildPhi");

   function LLVMBuildCall
     (B       : LLVMBuilderRef;
      Fn      : LLVMValueRef;
      Args    : System.Address;
      NumArgs : unsigned;
      Name    : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:962
   pragma Import (C, LLVMBuildCall, "LLVMBuildCall");

   function LLVMBuildSelect
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMValueRef;
      arg3 : LLVMValueRef;
      arg4 : LLVMValueRef;
      arg5 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:965
   pragma Import (C, LLVMBuildSelect, "LLVMBuildSelect");

   function LLVMBuildVAArg
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMValueRef;
      arg3 : LLVMTypeRef;
      arg4 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:968
   pragma Import (C, LLVMBuildVAArg, "LLVMBuildVAArg");

   function LLVMBuildExtractElement
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMValueRef;
      arg3 : LLVMValueRef;
      arg4 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:970
   pragma Import (C, LLVMBuildExtractElement, "LLVMBuildExtractElement");

   function LLVMBuildInsertElement
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMValueRef;
      arg3 : LLVMValueRef;
      arg4 : LLVMValueRef;
      arg5 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:972
   pragma Import (C, LLVMBuildInsertElement, "LLVMBuildInsertElement");

   function LLVMBuildShuffleVector
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMValueRef;
      arg3 : LLVMValueRef;
      arg4 : LLVMValueRef;
      arg5 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:975
   pragma Import (C, LLVMBuildShuffleVector, "LLVMBuildShuffleVector");

   function LLVMBuildExtractValue
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMValueRef;
      arg3 : unsigned;
      arg4 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:978
   pragma Import (C, LLVMBuildExtractValue, "LLVMBuildExtractValue");

   function LLVMBuildInsertValue
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMValueRef;
      arg3 : LLVMValueRef;
      arg4 : unsigned;
      arg5 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:980
   pragma Import (C, LLVMBuildInsertValue, "LLVMBuildInsertValue");

   function LLVMBuildIsNull
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMValueRef;
      arg3 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:984
   pragma Import (C, LLVMBuildIsNull, "LLVMBuildIsNull");

   function LLVMBuildIsNotNull
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMValueRef;
      arg3 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:986
   pragma Import (C, LLVMBuildIsNotNull, "LLVMBuildIsNotNull");
